Fixed image covering

--- a/styles/login-register.scss
+++ b/styles/login-register.scss
@@ -82,21 +82,6 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,1);
 }
 
-#background {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background: no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  z-index: -1;
-  height: 100vh;
-  width: 100vw;
-}
-
 .info {
   font-family: $font;
   position: fixed;
